<resources>
    <string name="app_name">demo_full</string>
    <string name="language">language</string>
    <string name="tutorial_description">tutorial_description</string>
    <string name="description2">description2</string>
    <string name="title_onboarding_1">Welcome to Onboarding App !</string>
    <string name="description_onboarding_1">Here is an open-source project which shows sweet &amp; original onboarding ViewPagers that follows Material Design Guidelines</string>
    <string name="title_onboarding_2">Try AirBnB Lottie</string>
    <string name="description_onboarding_2">We use Lottie Animations on our Intro to make it interactive &amp; pleasant. Did you already tried it ? If no, let\'s start now. It\'s just awesome</string>
    <string name="title_onboarding_3">Code beautiful apps</string>
    <string name="description_onboarding_3">Our mission is to make useful &amp; subtle apps. We love help people to save time with open-source stuffs, but we also make life easier by creating new things. Good Coding!</string>
    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="txt_language" />
    <string-array name="app_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
        <item>Item 10</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ScreenShot">Screenshots</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="add_photo_to">Add to Albums</string>
    <string name="addalbum">Add to Albums</string>
    <string name="afterglow">Afterglow</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="al_exo_track_role_commentary">Commentary</string>
    <string name="al_exo_track_role_supplementary">Supplementary</string>
    <string name="al_exo_track_selection_auto">Auto</string>
    <string name="al_exo_track_selection_none">None</string>
    <string name="al_exo_track_selection_title_audio">Audio</string>
    <string name="al_exo_track_selection_title_text">Text</string>
    <string name="al_exo_track_selection_title_video">Video</string>
    <string name="al_exo_track_stereo">Stereo</string>
    <string name="al_exo_track_surround">Surround sound</string>
    <string name="al_exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="al_exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="al_exo_track_unknown">Unknown</string>
    <string name="albums">Albums</string>
    <string name="all_media">All media</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="auto">Auto</string>
    <string name="auto_theme">Auto</string>
    <string name="base_download_fail">File download failed.</string>
    <string name="base_downloading">Loading file, please wait....</string>
    <string name="base_update_bt_no">No</string>
    <string name="base_update_bt_ok">Yes</string>
    <string name="blackpoint">blackpoint</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness">brightness</string>
    <string name="brilliance">brilliance</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chitiet">Detail</string>
    <string name="choose_image">Choose Image</string>
    <string name="chosse_app">Choose application</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="res_0x7f140076_com_google_firebase_crashlytics_mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="delete">Delete</string>
    <string name="enter_a_name_for_this_album">Enter a name for this album</string>
    <string name="new_album">New album</string>
    <string name="recover">Recover</string>
    <string name="save">Save</string>
    <string name="selected_items">Select Items</string>
    <string name="text_all_photos">All Photos</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
</resources>