<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"

    android:paddingTop="@dimen/padding_10"
    android:paddingBottom="@dimen/padding_10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imgPauseVideo"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/padding_5dp"
        android:visibility="invisible"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:src="@drawable/ic_pause_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgMute"
        app:layout_constraintStart_toEndOf="@+id/tv_delete"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imgMute"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/padding_5dp"
        android:visibility="invisible"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:src="@drawable/ic_mute_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_count_itemSelect"
        app:layout_constraintEnd_toStartOf="@+id/tv_recover"
        app:layout_constraintStart_toEndOf="@+id/imgPauseVideo"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textColor="@color/color_green2"
        android:id="@+id/tv_delete"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/padding_5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginStart="@dimen/margin_11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/text_size_13sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/tv_count_itemSelect"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:text="@string/selected_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_recover"
        app:layout_constraintStart_toEndOf="@+id/tv_delete"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textColor="@color/color_green2"
        android:gravity="end"
        android:id="@+id/tv_recover"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/padding_5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover"
        android:textAlignment="textEnd"
        android:layout_marginEnd="@dimen/margin_11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
