<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:label="@string/title_home"
        android:name="com.example.gallery.GalleryFragment"
        android:id="@+id/navigation_home">
        <action
            android:id="@+id/action_navigation_home_iamge_to_navigation_edit_iamge"
            app:destination="@+id/navigation_edit_iamge"/>
<!--        <action-->
<!--            android:id="@+id/action_navigation_home_to_navigation_detail_iamge"-->
<!--            app:destination="@id/navigation_detail_iamge" />-->
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail_iamge"
            app:destination="@id/navigation_detail_iamge"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:label="@string/title_dashboard"
        android:name="com.example.gallery.FavourateFragment"
        android:id="@+id/navigation_dashboard"/>
    <fragment
        android:label="@string/title_setting"
        android:name="com.example.gallery.SettingFragment"
        android:id="@+id/navigation_setting"/>
    <fragment
        android:name="com.example.gallery.EmptyFragment"
        android:id="@+id/navigation_empty"/>
    <fragment
        android:name="com.example.gallery.DetailImageFragment2"
        android:id="@+id/navigation_detail_iamge">
        <action
            android:id="@+id/action_navigation_detail_iamge_to_navigation_home"
            app:destination="@+id/navigation_home"/>
    </fragment>
    <fragment
        android:name="com.example.gallery.EditImageFragment"
        android:id="@+id/navigation_edit_iamge"/>
    <fragment
        android:name="com.example.gallery.GeneralAlbumFragment"
        android:id="@+id/navigation_general_iamge">
        <action
            android:id="@+id/action_navigation_general_iamge_to_navigation_album_iamge"
            app:destination="@+id/navigation_album_iamge"
            app:enterAnim="@anim/right_in_os14"
            app:exitAnim="@anim/left_out_os14"
            app:popEnterAnim="@anim/left_in_os14"
            app:popExitAnim="@anim/right_out_os14"/>
        <action
            android:id="@+id/action_navigation_general_iamge_to_navigation_recent_delete"
            app:destination="@+id/navigation_recent_delete"
            app:enterAnim="@anim/right_in_os14"
            app:exitAnim="@anim/left_out_os14"
            app:popEnterAnim="@anim/left_in_os14"
            app:popExitAnim="@anim/right_out_os14"/>
        <action
            android:id="@+id/action_navigation_general_iamge_to_navigation_detail_album"
            app:destination="@+id/navigation_detail_album"
            app:enterAnim="@anim/right_in_os14"
            app:exitAnim="@anim/left_out_os14"
            app:popEnterAnim="@anim/left_in_os14"
            app:popExitAnim="@anim/right_out_os14"/>
    </fragment>
    <fragment
        android:name="com.example.gallery.ImageAlbumFragment"
        android:id="@+id/navigation_album_iamge">
        <action
            android:id="@+id/action_navigation_album_iamge_to_navigation_detail_iamge"
            app:destination="@+id/navigation_detail_iamge"/>
    </fragment>
    <fragment
        android:name="com.example.gallery.RecentDeleteFragment"
        android:id="@+id/navigation_recent_delete"/>
    <fragment
        android:name="com.example.gallery.DetailAlbumFragment"
        android:id="@+id/navigation_detail_album">
        <action
            android:id="@+id/action_navigation_detail_album_to_navigation_album_iamge"
            app:destination="@+id/navigation_album_iamge"/>
    </fragment>
</navigation>
