<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="@drawable/bg_top_dialog_add_photo"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"

        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/color_green2"
            android:id="@+id/tvCancel"

            android:padding="@dimen/padding_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/margin_10"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"/>
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"/>
        <TextView
            android:textSize="@dimen/text_size_17sp"

            android:ellipsize="end"
            android:gravity="center"
            android:id="@+id/tvTitle"
            android:paddingLeft="@dimen/padding_4"
            android:paddingRight="@dimen/padding_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/text_all_photos"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="tvDone, tvCancelInvisible"/>
        <TextView
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/color_green2"
            android:id="@+id/tvDone"

            android:padding="@dimen/padding_6"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginEnd="@dimen/margin_10"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"/>
        <TextView
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/color_green2"
            android:id="@+id/tvCancelInvisible"

            android:padding="@dimen/padding_6"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/margin_10"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/cccccc"
        android:background="@color/tranparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_thumb"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginLeft="@dimen/_14sdp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:textSize="@dimen/text_size_17sp"

                android:ellipsize="end"
                android:id="@+id/tv_name"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/new_album"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_thumb"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvAllAlbums"

                android:paddingBottom="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
